# adaptive-instructional-artifacts

./: .env.example  .gitignore  AGENTS.md  README.md  cookies.txt  fix-tests-summary.sh  package-lock.json  package.json  playwright.config.ts  playwright.vercel.config.ts  start.sh  test-concept-parser-edge-cases.mjs  test-setup.ts  tsconfig.json  vercel.json  vitest.config.ts
.claude-plugin/: plugin.json
.playwright-mcp/: page-2026-04-14T23-39-51-592Z.yml  page-2026-04-15T00-03-33-999Z.yml  page-2026-04-20T01-29-32-075Z.yml  page-2026-04-20T01-29-47-671Z.yml
audit-results/: problem-content-audit.json
diagrams/: architecture-diagrams.md
docs/: AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_MODES.md  ENVIRONMENT.md  INDEX.md  PERSISTENCE_HARDENING_REPORT.md  PERSISTENCE_MAP.md  PROBLEM_CONTENT_AUDIT.json  PROGRESS_AUDIT_REPORT.md  PROGRESS_MODEL.md  PROJECT_COORDINATION.md  README.md  demo-script.md  progress.md  week1-status.md  week2-demo.md  week2-repro-compat.md  week2_progress.md  weekly-demo.md  weekly-progress.md
playwright-report 2/: index.html  (+9 more)
tools/pdf_ingest/: pyproject.toml
tools/pdf_ingest/src/pdf_ingest/: __init__.py  chunking.py  cli.py  config.py  docling_pipeline.py  embedding_backends.py  embedding_bakeoff.py  eval_queries.py  export_bundle.py  mlx_enricher.py  product_fit_rules.py  quality_eval.py  schemas.py
tools/pdf_ingest/tests/: test_bundle_schema.py  test_cli_embedding_config.py  test_docling_fallback.py  test_embedding_backends.py  test_eval_queries.py  test_mlx_enricher.py  test_product_fit_rules.py  test_upload_idempotency.py
(+959 files in other folders)
