[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sql-adapt-pdf-ingest"
version = "0.1.0"
description = "Local-only PDF ingest worker for SQL-Adapt"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "docling",
  "mlx",
  "mlx-lm",
  "pydantic>=2.7",
  "psycopg[binary]>=3.2",
  "python-dotenv",
  "orjson",
  "requests",
  "pypdf>=5.0",
  "PyMuPDF>=1.24",
]

[project.scripts]
pdf-ingest = "pdf_ingest.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
